Stylised input elements

--- a/survey.html
+++ b/survey.html
@@ -18,16 +18,17 @@
       <label><input class="radio-input" type="radio" value="no" name="form">Rabbit</label> 
       </div>
       <div class="input-div">
-      <select id="dropdown">
+      <select class="text-input" id="dropdown">
         <option>Cat</option>
         <option>Dog</option>
       </select>
       </div>
-      <input class="checkbox-input" type="checkbox" value="green" name="color">Green
-      <input class="checkbox-input" type="checkbox" value="blue" name="color">Blue
+      <div class="input-div">
+        <label><input class="checkbox-input radio-input" type="checkbox" value="green" name="color">Green</label>
+        <label><input class="checkbox-input radio-input" type="checkbox" value="blue" name="color">Blue</label>
+    </div>
       <textarea id="textarea" placeholder="Comments"></textarea>
       <button id="submit" type="submit">Submit</button>
     </form>
-
   </body>   
 </html>
